--- a/ui.frontend/src/components/ContainerComponents/HeaderComponent/headerComponent.scss
+++ b/ui.frontend/src/components/ContainerComponents/HeaderComponent/headerComponent.scss
@@ -1,4 +1,4 @@
-#headerStyle {
+header {
     font-family: 'Inconsolata', Arial, Helvetica, sans-serif;
     font-size: 24px;
     line-height: 25px;
