--- a/ui.frontend/src/components/ContainerComponents/HeaderComponent/headerComponent.scss
+++ b/ui.frontend/src/components/ContainerComponents/HeaderComponent/headerComponent.scss
@@ -1,7 +1,7 @@
 header {
     font-family: 'Inconsolata', Arial, Helvetica, sans-serif;
-    font-size: 24px;
-    line-height: 25px;
+    font-size: 0.875em;
+    line-height: 1.5625em;
     letter-spacing: -0.1em;
     text-align: left;
     margin: 2vw 0 0 2vw;
