--- a/ui.frontend/src/components/ContainerComponents/MainComponent/mainComponent.scss
+++ b/ui.frontend/src/components/ContainerComponents/MainComponent/mainComponent.scss
@@ -1,9 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 #containerMain{
     display: flex;
     justify-content: center;
@@ -37,14 +31,15 @@
         @media (max-width: 760px) {
             margin-left: 1.875em;
             width: 94%;
+            gap: 0em;
           }
     }
 
     @media (max-width: 760px) {
         flex-direction: column;
         flex-wrap: nowrap;
-        margin: 0 auto;
-        width: 94%;
-        padding-bottom: 0px;
+        width: 100%;
+        margin-top: 0em;
+        gap: 1em;
       }
 }
