--- a/ui.frontend/src/components/MicroComponents/ButtonComponent/buttonComponent.scss
+++ b/ui.frontend/src/components/MicroComponents/ButtonComponent/buttonComponent.scss
@@ -3,7 +3,16 @@ button {
     width: 220px;
     height: 70px;
     background: #333333;
-    font-size: 14px;
+    font-size: 0.875em;
     font-weight: 700;
     color: #ffffff;
+
+    
+    @media (max-width: 760px) {
+        width: 170px;
+        height: 60px;
+        margin-top: 14%;
+        margin-bottom: 14%;
+    }
+
 }
