--- a/ui.frontend/src/components/MicroComponents/TextComponent/textComponent.scss
+++ b/ui.frontend/src/components/MicroComponents/TextComponent/textComponent.scss
@@ -1,8 +1,12 @@
 p {
     font-family: 'Space Mono', Arial, Helvetica, sans-serif;
-    font-style: normal;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 1.5em;
     letter-spacing: -0.035em;
+
+    
+    @media (max-width: 760px) {
+        font-size: 1em;
+    }
+
 }
