--- a/ui.frontend/src/components/MicroComponents/TitleComponent/titleComponent.scss
+++ b/ui.frontend/src/components/MicroComponents/TitleComponent/titleComponent.scss
@@ -1,8 +1,12 @@
 h1 {
     font-family: 'Space Mono', Arial, Helvetica, sans-serif;
     font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
+    font-weight: 700;
+    font-size: 4em;
+    line-height: 1.5;
     letter-spacing: -0.035em;
+
+    @media (max-width: 760px) {
+        font-size: 2.5em;
+    }
 }
